--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
         <div class="col-lg-4">
           <img src="i/kb1.jpg" alt="Спот Кайтбич" class="img-fluid img-kb" />
           <img src="i/kb2.jpg" alt="Спот Кайтбич" class="img-fluid img-kb" />
-          <p class="small">Спот Кайтбич</p>
+          <p class="small">Спот Кайтбич, 2011</p>
         </div>
       </div>
     </div>
