text tunes from Shumi

--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,11 @@
           <ul>
             <li>Загораев Артем, <a href="http://kite4you.ru/">Kite4you</a>, кайт</li>
             <li>Городничев Олег "Дельфин", кайт</li>
-            <li>Балякин Александр, <a href="https://vk.com/tortugakgd">Торгуга</a>, вейк за катером, кайт</li>
+            <li>Балякин Александр, <a href="https://vk.com/tortugakgd">Торгуга</a>, вейк за катером, вейксерфинг, кайт, SUP</li>
             <li>Липовская Юлия, кайт</li>
-            <li>Исаков Евгений, <a href="http://konigsurf.club/">König Surf Club</a>, сёрфинг</li>
+            <li>Исаков Евгений, <a href="http://konigsurf.club/">König Surf Club</a>, сёрфинг, SUP</li>
             <li>Левинец Владимир, виндсерфинг, ремонт кайтов</li>
-            <li><a href="https://vk.com/wake_park">Wake Up</a>, вейк за лебедкой</li>
+            <li><a href="https://www.instagram.com/wakefamily39/">Wake Family 39</a>, вейк за лебедкой</li>
           </ul>
 
           <h4>Видео</h4>
