--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
           <h4>Полезные материалы</h4>
           <ul>
-            <li>Обзор кайт и сёрф спотов Калининграда, Рома Тимошенко</li>
+            <li><a href="spots.html">Обзор кайт и сёрф спотов Калининграда</a>, Рома Тимошенко</li>
             <li><a href="http://kite4you.ru/forum/viewtopic.php?f=7&t=2164&sid=44d44ddafbd52211d996dad3d9802185">Правила спота Кайтбич</a></li>
             <li><a href="http://kite4you.ru/forum/viewforum.php?f=7">Кайтфорум Kite4you</a></li>
           </ul>
@@ -47,6 +47,12 @@
           <h4>Видео</h4>
           <ul>
             <li><a href="https://www.youtube.com/watch?v=csMzwSALf5g">Кайтсерфинг в Калининграде</a>, 2012</li>
+          </ul>
+
+          <h4>Магазины снаряжения</h4>
+          <ul>
+            <li><a href="https://hydrosfera.pl/">Hydrosfera.pl</a>. Удобно общаться на английском, с удовольствием дают скидки, особенно при оплате наличными. Можно платить пластиковыми картами, но только в магазине в Władysławowo.</li>
+            <li><a href="http://abcsurf.pl/">abcsurf.pl</a></li>
           </ul>
 
         </div>
