--- a/public/spots.html
+++ b/public/spots.html
@@ -29,10 +29,11 @@
           <h4>Статистика</h4>
 
           <p>Хорошая ветровая статистика позволяет заниматься кайтсерфингом/виндсерфингом круглогодично. Некоторое ослабление наблюдается в летние месяцы.</p>
-          <table>
+
+          <table class="table-stats text">
             <tr>
               <td>Месяц</td>
-              <td class="wind-stat"></td>
+              <td class="wind-stat">Количество ветровых дней</td>
               <td>Дневная темп.</td>
               <td>Ночная темп.</td>
             </tr>
@@ -51,72 +52,80 @@
               <td>–3</td>
             </tr>
             <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
+              <td>Февраль</td>
               <td></td>
               <td></td>
               <td></td>
             </tr>
             <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
+              <td>Март</td>
               <td></td>
               <td></td>
               <td></td>
             </tr>
             <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
+              <td>Апрель</td>
               <td></td>
               <td></td>
               <td></td>
             </tr>
             <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
+              <td>Май</td>
               <td></td>
               <td></td>
               <td></td>
             </tr>
             <tr>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td></td>
+              <td>Июнь</td>
               <td></td>
               <td></td>
               <td></td>
             </tr>
             <tr>
+              <td>Июль</td>
               <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Август</td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Сентябрь</td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Октябрь</td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Ноябрь</td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Декабрь</td>
               <td></td>
               <td></td>
               <td></td>
             </tr>
           </table>
+
+          <div class="text legend">
+            <div class="bg-7">7 Bft</div>
+            <div class="bg-6">6 Bft</div>
+            <div class="bg-5">5 Bft</div>
+            <div class="bg-4">4 Bft</div>
+            <div class="bg-3">3 Bft</div>
+          </div>
 
 
           <p>Балтийское море всегда в движении, часто штормит. </p>
