--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
           <h4>Полезные материалы</h4>
           <ul>
-            <li><a href="spots.html">Обзор кайт и сёрф спотов Калининграда</a>, Рома Тимошенко</li>
+            <li><a href="spots.html">Обзор кайт и сёрф спотов Калининграда</a> — ветровая статистика, регионы, описание спотов</li>
             <li><a href="http://kite4you.ru/forum/viewtopic.php?f=7&t=2164&sid=44d44ddafbd52211d996dad3d9802185">Правила спота Кайтбич</a></li>
             <li><a href="http://kite4you.ru/forum/viewforum.php?f=7">Кайтфорум Kite4you</a></li>
           </ul>
