--- a/public/spots.html
+++ b/public/spots.html
@@ -15,6 +15,7 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4">Обзор кайт и сёрф спотов Калининграда</h1>
+        <p>Рома Тимошенко, Влад Рафеев</p>
       </div>
     </div>
     <div class="container">
@@ -136,13 +137,16 @@
 
           <p>Таким образом, вероятность шторма З, С-З, Ю-З направлений максимальна с сентября по январь. Также случаются штормы в летний период, обусловленные сильными антициклонами, но реже.</p>
 
-          <h4>Споты</h4>
 
-          <p>Основные кайтсерфспоты, отмеченные на схеме, перекрывают все ветровые направления.</p>
+          <h4>Районы</h4>
+
+          <p>Основные «условные» районы по ветровым направлениям и волновым предпочтениям. Продвинутые кайтеры, любители волн и морской воды предпочитают морское побережье. Ученики и новички, любители фристайла катаются на заливах.</p>
           
           <img src="i/SpotMap.png" alt="Районы" class="img-fluid text" />
 
-          <p>Основные «условные» районы по ветровым направлениям и волновым предпочтениям:</p>
+          
+
+          <h4>Споты</h4>
 
           <p><strong>Калининградский залив</strong>. Здесь расположен знаменитый КБ (Кайтбич) <span class="badge badge-secondary">1</span>, где зародился кайтсерфинг в регионе — самый популярный кайтспот. С мая по октябрь несколько кайт-школ ведут здесь обучение, федерация водных видов спорта проводят соревнования по фристайлу и курс-рейсу, отмечаются открытие и закрытие сезона. Песчаная коса с радиусом  почти 180° и 50-ти метровая отмель являются хорошими условиями для безопасного обучения и кайтсерфинга. Эффект Вентури усиливает ветер на Кайтбиче на 1-2 м/с, обычно здесь дует сильнее всего региона.</p>
 
