--- a/public/spots.html
+++ b/public/spots.html
@@ -54,7 +54,14 @@
             </tr>
             <tr>
               <td>Февраль</td>
-              <td></td>
+              <td>
+                <div class="progress">
+                  <div class="progress-bar bg-7" role="progressbar" style="width: 3.3%" aria-valuenow="3.3" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar bg-6" role="progressbar" style="width: 6.7%" aria-valuenow="6.7" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar bg-5" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar bg-4" role="progressbar" style="width: 33.3%" aria-valuenow="33.3" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar bg-3" role="progressbar" style="width: 26.6%" aria-valuenow="26.6" aria-valuemin="0" aria-valuemax="100"></div>
+                </div></td>
               <td>–2</td>
               <td>–3</td>
             </tr>
@@ -148,59 +155,51 @@
 
           <h4>Споты</h4>
 
-          <p><strong>Калининградский залив</strong>. Здесь расположен знаменитый КБ (Кайтбич) <span class="badge badge-secondary">1</span>, где зародился кайтсерфинг в регионе — самый популярный кайтспот. С мая по октябрь несколько кайт-школ ведут здесь обучение, федерация водных видов спорта проводят соревнования по фристайлу и курс-рейсу, отмечаются открытие и закрытие сезона. Песчаная коса с радиусом  почти 180° и 50-ти метровая отмель являются хорошими условиями для безопасного обучения и кайтсерфинга. Эффект Вентури усиливает ветер на Кайтбиче на 1-2 м/с, обычно здесь дует сильнее всего региона.</p>
+          <p><strong>Калининградский залив</strong>. Здесь расположен знаменитый КБ (Кайтбич)&nbsp;<span class="badge badge-secondary">1</span>, где зародился кайтсерфинг в регионе — самый популярный кайтспот. С мая по октябрь несколько кайт-школ ведут здесь обучение, федерация водных видов спорта проводят соревнования по фристайлу и курс-рейсу, отмечаются открытие и закрытие сезона. Песчаная коса с радиусом  почти 180° и 50-ти метровая отмель являются хорошими условиями для безопасного обучения и кайтсерфинга. Эффект Вентури усиливает ветер на Кайтбиче на 1—2 м/с, обычно здесь дует сильнее всего региона.</p>
 
-          <p>Также по соседству с КБ расположен яхтклуб <span class="badge badge-secondary">2</span>, располагающий большой инфраструктурой: прокат виндсерф оборудования, школа, мастерская. Немного ближе к городу в поселке Дельфин есть отличное место в восточной бухте, но спот работает только при западном ветре. На другой стороне Калининградского залива в бухте Приморская есть спот по редкое ЮВ направление.</p>
+          <p>Также по соседству с КБ расположен «Яхтклуб»&nbsp;<span class="badge badge-secondary">2</span>, располагающий большой инфраструктурой: прокат виндсерф оборудования, школа, мастерская. Немного ближе к городу в поселке Дельфин есть отличное место в восточной бухте, но спот работает только при западном ветре. На другой стороне Калининградского залива в бухте Приморская есть спот по редкое ЮВ направление.</p>
 
           <p>Помимо кайтсерфинга и виндсерфинга, развивающегося семимильными шагами и насчитывающего более 300 человек, большую популярность приобретают и другие водные виды спорта: классический серфинг, сап-серфинг, бодибординг. А эти виды спорта требуют наличия хорошей морской волны, которая у нас в регионе бывает часто.</p>
 
-          <p><strong>Северное побережье</strong>. Именно здесь споты принимают на себя сокрушительные С-З штормы Балтики, особенно в районе Зеленоградской бухты. После шторма сюда подходит хороший свелл, пригодный для катания на серф- и сап-бордах. Основные споты северной береговой линии:</p>
+          <img src="i/NorthShore.png" alt="Споты северного побережья" class="img-fluid text" />
 
-          <ul>
-            <li>Зеленоградск «Амбар» (серф-спот) <span class="badge badge-secondary">3</span></li>
-            <li>Малиновка «Наковальня» <span class="badge badge-secondary">4</span></li>
-            <li>Куликово «Ветряки» <span class="badge badge-secondary">5</span></li>
-            <li>Пионерский «Порт» <span class="badge badge-secondary">6</span></li>
-          </ul>
+          <p><strong>Северное побережье</strong>. Именно здесь споты принимают на себя сокрушительные С-З штормы Балтики, особенно в районе Зеленоградской бухты. После шторма сюда подходит хороший свелл, пригодный для катания на серф- и сап-бордах. Основные споты северной береговой линии:</p>
 
           <p>Лучшие направления для этих мест: З, С-З, С-В, В. Наилучшие волны приходят при движении ветра и волны по касательной к берегу, в начале шторма. При северном ветре будут сложности с волнорезами, кроме Куликово, где их нет. При западном ветре можно сделать даунвинд по традиционному направлению п. Малиновка — п. Лесное, но маршрут не для новичков, так как встречается много волнорезов и других подводных опасностей. Из Калининграда до Зеленоградска можно комфортно и быстро добраться по трассе «Приморское кольцо», в среднем 15 мин.</p>
 
-          <p>На «Амбаре» <span class="badge badge-secondary">3</span> ломаются самые красивые волны благодаря правильной форме песчаного дна. Но частые волнорезы, узкая полоска пляжа, камни в воде и толпы отдыхающих туристов делают этот спот пригодным только для уверенных в себе кайтеров. Также на этом споте любят кататься сёрферы, но сильный ветер их разгоняет. Рядом есть платная парковка, несколько неплохих кафе и променад.</p>
+          <p>В Зеленоградске на «Амбаре»&nbsp;<span class="badge badge-secondary">3</span> ломаются самые красивые волны благодаря правильной форме песчаного дна. Но частые волнорезы, узкая полоска пляжа, камни в воде и толпы отдыхающих туристов делают этот спот пригодным только для уверенных в себе кайтеров. Также на этом споте любят кататься сёрферы, но сильный ветер их разгоняет. Рядом есть платная парковка, несколько неплохих кафе и променад.</p>
 
-          <p>В Малиновке <span class="badge badge-secondary">4</span> волны чуть хуже, но много места для запуска, почти нет волнорезов. Из опасностей — каменные сваи в некоторых местах пляжа.</p>
+          <p>В Малиновке на «Наковальне»&nbsp;<span class="badge badge-secondary">4</span> волны чуть хуже, но много места для запуска, почти нет волнорезов. Из опасностей — каменные сваи в некоторых местах пляжа.</p>
 
-          <p>Добраться до Куликово <span class="badge badge-secondary">5</span> не так просто из-за плохой дороги. На споте отсутствует какая-либо инфраструктура.</p>
+          <p>Добраться до спота «Ветряки» в Куликово&nbsp;<span class="badge badge-secondary">5</span> не так просто из-за плохой дороги. На споте отсутствует какая-либо инфраструктура.</p>
 
-          <p>В Пионерский <span class="badge badge-secondary">6</span> при сильном С-З ветре случаются пологие волны с большим периодом, возле захода в порт. Правда часто на этом споте ветра бывает маловато.</p>
+          <p>В Пионерский на споте «Порт»&nbsp;<span class="badge badge-secondary">6</span> при сильном С-З ветре случаются пологие волны с большим периодом, возле захода в порт. Правда часто на этом споте ветра бывает маловато.</p>
 
           <p>Также хороший серф может получиться в пос. Заостровье (мыс. Гвардейский), т.к. его каменистое дно служит в роли барьерного рифа. Но забудьте здесь про кайтсерфинг, площадки для запуска нет.</p>
 
           
-          <p><strong>Западное побережье</strong>. Споты славятся своей безлюдностью и широкими пляжами. По всей береговой линии вы не встретите ни одного волнореза и др. подводных препятствий от Балтийска до мыса Таран. Основные споты в этом регионе:</p>
-          
-          <ul>
-            <li>Балтийск <span class="badge badge-secondary">7</span></li>
-            <li>Приморск <span class="badge badge-secondary">8</span></li>
-            <li>Хмелевка <span class="badge badge-secondary">9</span></li>
-            <li>Поваровка <span class="badge badge-secondary">10</span></li>
-            <li>Янтарный <span class="badge badge-secondary">11</span></li>
-            <li>мыс Таран <span class="badge badge-secondary">12</span></li>
-          </ul>
+          <p><strong>Западное побережье</strong>. Споты славятся своей безлюдностью и широкими пляжами. По всей береговой линии вы не встретите ни одного волнореза и других подводных препятствий от Балтийска до мыса Таран.</p>
 
-          <p>Самая западная точка РФ – Балтийск <span class="badge badge-secondary">7</span>. Бесспорно самые большие и ровные волны именно здесь. Но спот работает только при сильном ЮЗ, ЮЮЗ иди ЗЮЗ, что бывает нечасто, случается в основном в осенне-зимний период. Здесь наблюдаются сильные разрывные течения в районе мола, что делает спот крайне опасным для классического серфинга. Обычно в Балтийске дует меньше, чем на остальных спотах региона на 1-2 м/с.</p>
+          <p>Самая западная точка РФ – Балтийск&nbsp;<span class="badge badge-secondary">7</span>. Бесспорно самые большие и ровные волны именно здесь. Но спот работает только при сильном ЮЗ, ЮЮЗ иди ЗЮЗ, что бывает нечасто, случается в основном в осенне-зимний период. Здесь наблюдаются сильные разрывные течения в районе мола, что делает спот крайне опасным для классического серфинга. Обычно в Балтийске дует меньше, чем на остальных спотах региона на 1-2 м/с.</p>
 
-          <p>Если нужно настоящее приключение, то отправляетесь в пос. Донское (мыс Таран), где вы встретите высокие обрывистые берега и нетронутый человеком шикарный пляж. От места парковки до пляжа спускаться около 30 мин.</p>
+          <p>Если нужно настоящее приключение, то отправляетесь в посёлок Донское на мыс Таран&nbsp;<span class="badge badge-secondary">12</span>, где вы встретите высокие обрывистые берега и нетронутый человеком шикарный пляж. От места парковки до пляжа спускаться около 30 минут.</p>
 
-          <p>Самым популярным местом выходного дня когда-то был спот Янтарный (Галера), где широкий пляж в 150 метров готов вместить сотню кайтеров и виндсерферов. Особенностью места является наличие прямо на пляже широкого карьера, что позволяет кататься и на волнах и по ровной воде. Качество волны среднее: волны, как правило, большие, но хаотичные. Хотя при параллельных направлениях иногда встречается правильный прибой. Немного южнее Янтарного есть спот Поваровка — отличное место для поездки с ночевкой большой компанией. Добраться можно только на внедорожнике. Во всем остальном — тоже же самое что и Янтарный. Прямо посередине между Янтарным и Балтийском расположено загадочное место Хмелевка. По сути это испытательный полигон Министерства обороны, где нередко в воде можно встретить БТР. Место военными подобрано с учетом большой морской отмели вблизи побережья, что создает ровный прибой при Ю-З ветре. Не слышал что бы туда подъезжали на машинах, только во время даунвиндов, как промежуточный пункт.</p>
+          <p>Популярным местом выходного дня является спот Янтарный&nbsp;<span class="badge badge-secondary">11</span> (рядом с кафе «Галера»). Широкий пляж в 150 метров готов вместить сотню кайтеров и виндсерферов. Особенностью места является наличие прямо на пляже широкого карьера, что позволяет кататься и на волнах и по ровной воде. Качество волны среднее: волны, как правило, большие, но хаотичные. Хотя при параллельных направлениях иногда встречается правильный прибой.</p>
+
+          <p>Немного южнее Янтарного есть спот Поваровка&nbsp;<span class="badge badge-secondary">10</span> — отличное место для поездки с ночевкой большой компанией. Добраться можно только на внедорожнике. Во всем остальном — тоже же самое что и Янтарный.</p>
+
+          <p>Прямо посередине между Янтарным и Балтийском расположено загадочное место <span class="spot">Хмелевка <span class="badge badge-secondary">9</span></span>. По сути это испытательный полигон Министерства обороны, где нередко в воде можно встретить БТР. Место военными подобрано с учетом большой морской отмели вблизи побережья, что создает ровный прибой при Ю-З ветре. Не слышал что бы туда подъезжали на машинах, только во время даунвиндов, как промежуточный пункт.</p>
+
+          <p>Есть ещё спот Приморск&nbsp;<span class="badge badge-secondary">8</span>, но мы про него ничего не знаем.</p>
 
 
           <p><strong>Куршская коса</strong>. Национальный заповедник «Куршская коса» позволяет ловить ветер всех направлений со стороны моря или со стороны Куршского залива. Залив мелкий и практически пресноводный, не является судоходным, средняя глубина 3,5 метра. Летом залив прогревается до 25° C, при южных термическим ветрах можно кататься без гидрокостюма. Отличное место для новичков и любителей фристайла. Со стороны залива можно выделить 4 спота: 
 
           <ul>
-            <li>п. Каширское (ориентир аэропорт Храброво) <span class="badge badge-secondary">13</span></li>
-            <li>п. Лесное (турбаза Дюны) <span class="badge badge-secondary">14</span></li>
-            <li>п. Рыбачий (база отдыха «Альтримо») <span class="badge badge-secondary">15</span></li>
-            <li>п. Морское (база отдыха Досуг) <span class="badge badge-secondary">16</span></li>
+            <li>п. Каширское (ориентир аэропорт Храброво)&nbsp;<span class="badge badge-secondary">13</span></li>
+            <li>п. Лесное (турбаза Дюны)&nbsp;<span class="badge badge-secondary">14</span></li>
+            <li>п. Рыбачий (база отдыха «Альтримо»)&nbsp;<span class="badge badge-secondary">15</span></li>
+            <li>п. Морское (база отдыха Досуг)&nbsp;<span class="badge badge-secondary">16</span></li>
           </ul>
 
 
@@ -209,9 +208,9 @@
           <p>Споты Куршской косы со стороны Балтийского моря:</p>
 
           <ul>
-            <li>пос. Лесное <span class="badge badge-secondary">17</span></li>
-            <li>пос. Рыбачий <span class="badge badge-secondary">18</span></li>
-            <li>пос. Морское <span class="badge badge-secondary">19</span></li>
+            <li>пос. Лесное&nbsp;<span class="badge badge-secondary">17</span></li>
+            <li>пос. Рыбачий&nbsp;<span class="badge badge-secondary">18</span></li>
+            <li>пос. Морское&nbsp;<span class="badge badge-secondary">19</span></li>
           </ul>
 
 
