--- a/public/spots.html
+++ b/public/spots.html
@@ -161,7 +161,7 @@
 
           <p>Помимо кайтсерфинга и виндсерфинга, развивающегося семимильными шагами и насчитывающего более 300 человек, большую популярность приобретают и другие водные виды спорта: классический серфинг, сап-серфинг, бодибординг. А эти виды спорта требуют наличия хорошей морской волны, которая у нас в регионе бывает часто.</p>
 
-          <img src="i/NorthShore.png" alt="Споты северного побережья" class="img-fluid text" />
+          <img src="i/NorthShore.png" alt="Споты северного побережья Калининградской области" class="img-fluid text" />
 
           <p><strong>Северное побережье</strong>. Именно здесь споты принимают на себя сокрушительные С-З штормы Балтики, особенно в районе Зеленоградской бухты. После шторма сюда подходит хороший свелл, пригодный для катания на серф- и сап-бордах. Основные споты северной береговой линии:</p>
 
@@ -169,7 +169,7 @@
 
           <p>В Зеленоградске на «Амбаре»&nbsp;<span class="badge badge-secondary">3</span> ломаются самые красивые волны благодаря правильной форме песчаного дна. Но частые волнорезы, узкая полоска пляжа, камни в воде и толпы отдыхающих туристов делают этот спот пригодным только для уверенных в себе кайтеров. Также на этом споте любят кататься сёрферы, но сильный ветер их разгоняет. Рядом есть платная парковка, несколько неплохих кафе и променад.</p>
 
-          <p>В Малиновке на «Наковальне»&nbsp;<span class="badge badge-secondary">4</span> волны чуть хуже, но много места для запуска, почти нет волнорезов. Из опасностей — каменные сваи в некоторых местах пляжа.</p>
+          <p>В Малиновке на «Наковальне»&nbsp;<span class="badge badge-secondary">4</span> волны чуть хуже, но много места для запуска, почти нет волнорезов. Один из самых популярных спотов для любителей каталки на море. Из опасностей — каменные сваи в некоторых местах пляжа.</p>
 
           <p>Добраться до спота «Ветряки» в Куликово&nbsp;<span class="badge badge-secondary">5</span> не так просто из-за плохой дороги. На споте отсутствует какая-либо инфраструктура.</p>
 
@@ -177,6 +177,9 @@
 
           <p>Также хороший серф может получиться в пос. Заостровье (мыс. Гвардейский), т.к. его каменистое дно служит в роли барьерного рифа. Но забудьте здесь про кайтсерфинг, площадки для запуска нет.</p>
 
+
+
+          <img src="i/WestShore.png" alt="Споты западного побережья Калининградской области" class="img-fluid text" />
           
           <p><strong>Западное побережье</strong>. Споты славятся своей безлюдностью и широкими пляжами. По всей береговой линии вы не встретите ни одного волнореза и других подводных препятствий от Балтийска до мыса Таран.</p>
 
