--- a/public/spots.html
+++ b/public/spots.html
@@ -14,6 +14,7 @@
   <body>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
+        <p class="small"><a href="index.html">← вернуться на главную</a></p>
         <h1 class="display-4">Обзор кайт и сёрф спотов Калининграда</h1>
         <p>Рома Тимошенко, Влад Рафеев</p>
       </div>
