--- a/public/meteo.html
+++ b/public/meteo.html
@@ -14,6 +14,7 @@
   <body>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
+        <p class="small"><a href="index.html">← вернуться на главную</a></p>
         <h1 class="display-4">Метеостанции Калининграда</h1>
       </div>
     </div>
