--- a/public/meteo.html
+++ b/public/meteo.html
@@ -15,7 +15,7 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <p class="small"><a href="index.html">← вернуться на главную</a></p>
-        <h1 class="display-4">Метеостанции Калининграда</h1>
+        <h1>Метеостанции Калининграда</h1>
       </div>
     </div>
     <div class="container">
