--- a/public/spots.html
+++ b/public/spots.html
@@ -15,7 +15,7 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <p class="small"><a href="index.html">← вернуться на главную</a></p>
-        <h1 class="display-4">Обзор кайт и сёрф спотов Калининграда</h1>
+        <h1>Обзор кайт и сёрф спотов Калининграда</h1>
         <p>Рома Тимошенко, Влад Рафеев</p>
       </div>
     </div>
