--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Кайтсерфинг в Калининграде</h1>
+        <h1>Кайтсерфинг в Калининграде</h1>
       </div>
     </div>
     <div class="container">
