--- a/spots.html
+++ b/spots.html
@@ -169,13 +169,15 @@
 
           <p>Лучшие направления для этих мест: З, С-З, С-В, В. Наилучшие волны приходят при движении ветра и волны по касательной к берегу, в начале шторма. При северном ветре будут сложности с волнорезами, кроме Куликово, где их нет. При западном ветре можно сделать даунвинд по традиционному направлению п. Малиновка — п. Лесное, но маршрут не для новичков, так как встречается много волнорезов и других подводных опасностей. Из Калининграда до Зеленоградска можно комфортно и быстро добраться по трассе «Приморское кольцо», в среднем 15 мин.</p>
 
+          <p>При волнении от 1.5 метров высотой появляется «второй прибой» примерно в 200-300 метрах от берега.</p>
+
           <p>В Зеленоградске на «Амбаре»&nbsp;<span class="badge badge-secondary">3</span> ломаются самые красивые волны благодаря правильной форме песчаного дна. Но частые волнорезы, узкая полоска пляжа, камни в воде и толпы отдыхающих туристов делают этот спот пригодным только для уверенных в себе кайтеров. Также на этом споте любят кататься сёрферы, но сильный ветер их разгоняет. Рядом есть платная парковка, несколько неплохих кафе и променад.</p>
 
-          <p>В Малиновке на «Наковальне»&nbsp;<span class="badge badge-secondary">4</span> волны чуть хуже, но много места для запуска, почти нет волнорезов. Один из самых популярных спотов для любителей каталки на море. Из опасностей — каменные сваи в некоторых местах пляжа.</p>
+          <p>В Малиновке на «Наковальне»&nbsp;<span class="badge badge-secondary">4</span> волны чуть хуже, но много места для запуска, почти нет волнорезов. Один из самых популярных спотов для любителей каталки на море. Большая парковка на 500 мест рядом с кэмпингом и строящейся базой сёрфинга König Surf Club. Есть кафе, выходящее прямо на пляж. Из опасностей — каменные сваи в некоторых местах пляжа.</p>
 
-          <p>Добраться до спота «Ветряки» в Куликово&nbsp;<span class="badge badge-secondary">5</span> не так просто из-за плохой дороги. На споте отсутствует какая-либо инфраструктура.</p>
+          <p>Добраться до спота «Ветряки» в Куликово&nbsp;<span class="badge badge-secondary">5</span> не так просто из-за плохой дороги. На споте отсутствует какая-либо инфраструктура. У берега довольно много камней.</p>
 
-          <p>В Пионерский на споте «Порт»&nbsp;<span class="badge badge-secondary">6</span> при сильном С-З ветре случаются пологие волны с большим периодом, возле захода в порт. Правда часто на этом споте ветра бывает маловато.</p>
+          <p>В Пионерский на споте «Порт»&nbsp;<span class="badge badge-secondary">6</span> при сильном С-З ветре случаются пологие волны с большим периодом, возле захода в порт. Правда часто на этом споте ветра бывает маловато. Из опасностей — на споте много камней в воде.</p>
 
           <p>Также хороший серф может получиться в пос. Заостровье (мыс. Гвардейский), т.к. его каменистое дно служит в роли барьерного рифа. Но забудьте здесь про кайтсерфинг, площадки для запуска нет.</p>
 
@@ -222,7 +224,6 @@
 
 
           <p>При западном направлении ветра особенной популярностью служит маршрут пос. Лесное — пос. Морское (даунвинд), протяженностью 40 км. При северных направлениях можно повторить маршрут в обратном направлении. Споты Куршской косы живописны и безопасны, там нет волнорезов и подводных валунов.</p>
-
           
         </div>
     </div>
