few links added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <li>Балякин Александр, <a href="https://vk.com/tortugakgd">Торгуга</a>, вейк за катером, вейксерфинг, кайт, SUP</li>
             <li>Липовская Юлия, кайт</li>
             <li>Исаков Евгений, <a href="http://konigsurf.club/">König Surf Club</a>, сёрфинг, SUP</li>
+            <li><a href="https://www.instagram.com/balticsupsurf/">Baltic Sup & Surf</a>, Аня Матвеева, сёрфинг и SUP</li>
             <li>Левинец Владимир, виндсерфинг, ремонт кайтов</li>
             <li><a href="https://www.instagram.com/wakefamily39/">Wake Family 39</a>, вейк за лебедкой</li>
           </ul>
@@ -49,6 +50,7 @@
           <h4>Видео</h4>
           <ul>
             <li><a href="https://www.youtube.com/watch?v=csMzwSALf5g">Кайтсерфинг в Калининграде</a>, 2012</li>
+            <li><a href="https://youtu.be/REOwoOTvTxg">Серфинг в Зеленоградске</a>, 2020</li>
           </ul>
 
           <h4>Магазины снаряжения</h4>
