--- a/index.html
+++ b/index.html
@@ -20,12 +20,6 @@
     <div class="container">
       <div class="row">
         <div class="col-md-10 col-lg-8">
-          <h4>Чатики в WhatsApp, тут все общаются</h4>
-          <ul>
-            <li><a href="https://chat.whatsapp.com/J479PjI78lhH4ETGEVBvyl">Кайты Kite4you</a> — Кайтбич</li>
-            <li><a href="https://chat.whatsapp.com/3AT2jppfHwO22ipZM6VYot">Wave clinic</a> — морская каталка, Зеленоградск, Куршская Коса</li>
-          </ul>
-
           <h4>Полезные материалы</h4>
           <ul>
             <li><a href="meteo.html">Метеостанции Калининграда</a></li>
@@ -33,6 +27,13 @@
             <li><a href="spots.html">Обзор кайт и сёрф спотов Калининграда</a> — ветровая статистика, регионы, описание спотов</li>
             <li><a href="http://kite4you.ru/forum/viewtopic.php?f=7&t=2164&sid=44d44ddafbd52211d996dad3d9802185">Правила спота Кайтбич</a></li>
             <li><a href="http://kite4you.ru/forum/viewforum.php?f=7">Кайтфорум Kite4you</a></li>
+          </ul>
+
+          <h4>Чатики, тут все общаются</h4>
+          <ul>
+            <li>«Кайты Kite4you», WhatsApp — Кайтбич</li>
+            <li>«Wave clinic», WhatsApp — морская каталка, Зеленоградск, Куршская Коса</li>
+            <li>«Ветреные люди», Viber — морская каталка, сливы по Косе</li>
           </ul>
 
           <h4>Инструктора, школы, сервис</h4>
