--- a/spots.html
+++ b/spots.html
@@ -171,7 +171,7 @@
 
           <p>При волнении от 1.5 метров высотой появляется «второй прибой» примерно в 200-300 метрах от берега.</p>
 
-          <p>В Зеленоградске на «Амбаре»&nbsp;<span class="badge badge-secondary">3</span> ломаются самые красивые волны благодаря правильной форме песчаного дна. Но частые волнорезы, узкая полоска пляжа, камни в воде и толпы отдыхающих туристов делают этот спот пригодным только для уверенных в себе кайтеров. Также на этом споте любят кататься сёрферы, но сильный ветер их разгоняет. Рядом есть платная парковка, несколько неплохих кафе и променад.</p>
+          <p>В Зеленоградске на «Амбаре»&nbsp;<span class="badge badge-secondary">3</span> ломаются самые красивые волны благодаря правильной форме песчаного дна. Но частые волнорезы, узкая полоска пляжа, камни в воде и толпы отдыхающих туристов делают этот спот пригодным только для уверенных в себе кайтеров. Также на этом споте любят кататься сёрферы, но сильный ветер их разгоняет. Рядом есть платная парковка, несколько неплохих кафе и променад. В последние годы на споте появились камни и пни. Справа от «Амбара» есть разрушенные железные конструкции, остатки немецкого променада.</p>
 
           <p>В Малиновке на «Наковальне»&nbsp;<span class="badge badge-secondary">4</span> волны чуть хуже, но много места для запуска, почти нет волнорезов. Один из самых популярных спотов для любителей каталки на море. Большая парковка на 500 мест рядом с кэмпингом и строящейся базой сёрфинга König Surf Club. Есть кафе, выходящее прямо на пляж. Из опасностей — каменные сваи в некоторых местах пляжа.</p>
 
@@ -179,7 +179,7 @@
 
           <p>В Пионерский на споте «Порт»&nbsp;<span class="badge badge-secondary">6</span> при сильном С-З ветре случаются пологие волны с большим периодом, возле захода в порт. Правда часто на этом споте ветра бывает маловато. Из опасностей — на споте много камней в воде.</p>
 
-          <p>Также хороший серф может получиться в пос. Заостровье (мыс. Гвардейский), т.к. его каменистое дно служит в роли барьерного рифа. Но забудьте здесь про кайтсерфинг, площадки для запуска нет.</p>
+          <p>Хороший серф может получиться на «<a href="https://goo.gl/maps/MLHbrudUF5YrTsJr9">Джекспоте</a>»&nbsp;<span class="badge badge-secondary">20</span> в пос. Заостровье (мыс. Гвардейский), т.к. его каменистое дно служит в роли барьерного рифа. Он работает, когда волна приходит с западных направлений, когда в Зеленоградске уже слишком большие волны. Но забудьте здесь про кайтсерфинг, площадки для запуска нет. В воде разбросаны большие камни и бетонные триподы.</p>
 
 
 
