--- a/spots.html
+++ b/spots.html
@@ -179,7 +179,7 @@
 
           <p>В Пионерский на споте «Порт»&nbsp;<span class="badge badge-secondary">6</span> при сильном С-З ветре случаются пологие волны с большим периодом, возле захода в порт. Правда часто на этом споте ветра бывает маловато. Из опасностей — на споте много камней в воде.</p>
 
-          <p>Хороший серф может получиться на «<a href="https://goo.gl/maps/MLHbrudUF5YrTsJr9">Джекспоте</a>»&nbsp;<span class="badge badge-secondary">20</span> в пос. Заостровье (мыс. Гвардейский), т.к. его каменистое дно служит в роли барьерного рифа. Он работает, когда волна приходит с западных направлений, когда в Зеленоградске уже слишком большие волны. Но забудьте здесь про кайтсерфинг, площадки для запуска нет. В воде разбросаны большие камни и бетонные триподы.</p>
+          <p>Хороший серф может получиться на «<a href="https://goo.gl/maps/MLHbrudUF5YrTsJr9">Джекспоте</a>»&nbsp;<span class="badge badge-secondary">20</span> в пос. Заостровье (мыс. Гвардейский), т.к. его каменистое дно служит в роли барьерного рифа. Он работает, когда волна приходит с западных направлений, когда в Зеленоградске уже слишком большие волны (в прогнозе 2+ метра). Но забудьте здесь про кайтсерфинг, площадки для запуска нет. В воде разбросаны большие камни и бетонные триподы.</p>
 
 
 
