--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
           <img src="i/kb1.jpg" alt="Спот Кайтбич" class="img-fluid img-kb" />
           <img src="i/kb2.jpg" alt="Спот Кайтбич" class="img-fluid img-kb" />
           <p class="small">Кайтбич — самый популярный спот в регионе, 2011</p>
+          <img src="i/spots/baltiysk.jpeg" alt="Спот Балтийск" class="img-fluid img-kb" />
+          <p class="small">Самая большая волна приходит в Балтийск</p>
         </div>
       </div>
     </div>
