--- a/spots.html
+++ b/spots.html
@@ -199,13 +199,7 @@
           </div>
 
 
-          <p>Балтийское море всегда в движении, часто штормит. </p>
-
-          <p>В соответствии с 20-летними наблюдениями с опорных станций Ристна (в северной части) и Балтийск (южная часть, Калининградская область) приводится следующая статистика преобладающих штормовых направлений:</p>
-
-          <p>В следующей таблице приведена помесячная статистика с преобладанием штормовых циклонов (скорость ветра более 12 м/с):</p>
-
-          <p>Таким образом, вероятность шторма З, С-З, Ю-З направлений максимальна с сентября по январь. Также случаются штормы в летний период, обусловленные сильными антициклонами, но реже.</p>
+          <p>Балтийское море всегда в движении, часто штормит. Вероятность шторма З, С-З, Ю-З направлений максимальна с сентября по январь. Также случаются штормы в летний период, обусловленные сильными антициклонами, но реже.</p>
           
 
           <img src="i/SpotMap.png" alt="Районы" class="img-fluid text" />
