--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           <h4>Инструктора, школы, сервис</h4>
           <ul>
             <li>Загораев Артем, <a href="http://kite4you.ru/">Kite4you</a>, кайт</li>
-            <li>Городничев Олег "Дельфин", кайт</li>
+            <li><a href="https://www.facebook.com/oleg.gorodnichev">Городничев Олег "Дельфин"</a>, кайт, сливы по Косе</li>
             <li>Балякин Александр, <a href="https://vk.com/tortugakgd">Торгуга</a>, вейк за катером, вейксерфинг, кайт, SUP</li>
             <li>Липовская Юлия, кайт</li>
             <li>Исаков Евгений, <a href="http://konigsurf.club/">König Surf Club</a>, сёрфинг, SUP</li>
-            <li><a href="https://www.instagram.com/balticsupsurf/">Baltic Sup & Surf</a>, Аня Матвеева, сёрфинг и SUP</li>
+            <li>Аня Матвеева, <a href="https://www.instagram.com/balticsupsurf/">Baltic Sup & Surf</a>, сёрфинг и SUP</li>
             <li>Левинец Владимир, виндсерфинг, ремонт кайтов</li>
             <li><a href="https://www.instagram.com/wakefamily39/">Wake Family 39</a>, вейк за лебедкой</li>
           </ul>
